syntax="proto3";

package partnermerchant;

message PartnerMerchant {
    string id = 1;
    string name = 2;
    repeated string locations = 3;
    repeated string api_tags = 4;
    repeated string otis_tags = 5;
    string sector = 6;
    string size = 7;
    int32 rate = 8;
    string joinDate = 9;
    string nextBillingDate = 10;
    string gocardlessMandate = 11;
    string expenseBand = 12;
}